k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
  labels:
    app: calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      volumes:
        - name: encrypted-conf
          persistentVolumeClaim:
            claimName: pvc-calculator-conf
        - name: decrypted-conf
          emptyDir: {}
      containers:
      - name: calculator
        image: calculator:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: decrypted-conf
            mountPath: /mnt/decrypted
            readOnly: true
        args:
          - "--server.baseUrlPath"
          - "/calculator"
        ports:
        - containerPort: 8501
          name: web
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /calculator/_stcore/health
            port: 8501
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /calculator/_stcore/health
            port: 8501
          initialDelaySeconds: 5
          periodSeconds: 5
