k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
  labels:
    app: calculator
spec:
  selector:
    app: calculator
  ports:
  - port: 80
    targetPort: 8501
    name: web
  type: ClusterIP
