k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator
spec:
  rules:
  - http:
      paths:
      - path: /calculator
        pathType: Prefix
        backend:
          service:
            name: calculator
            port:
              number: 80
